--- a/src/main/webapp/admin/reizen.xhtml
+++ b/src/main/webapp/admin/reizen.xhtml
@@ -9,12 +9,10 @@
       xmlns:a="http://xmlns.jcp.org/jsf/passthrough">
 <h:body>
 <ui:composition template="/templates/layout_admin.xhtml">
-
     <f:metadata >
         <f:viewAction action="#{ViewController.setActiveTab('reizen')}" />
     </f:metadata>
-
-    <ui:define name="title">Reizen bewerken</ui:define>
+    <ui:define name="title">Reizen beheren</ui:define>
     <ui:define name="content">
 
         <div class="accordion" id="accordionReizen">
