--- a/src/main/webapp/bezoeker/login.xhtml
+++ b/src/main/webapp/bezoeker/login.xhtml
@@ -3,13 +3,13 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:p="http://primefaces.org/ui"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
+
 <h:body>
     <ui:composition template="/templates/layout.xhtml">
-
         <f:metadata >
             <f:viewAction action="#{ViewController.setActiveTab('login')}" />
         </f:metadata>
-
+        <ui:define name="title">Aanmelden</ui:define>
         <ui:define name="content">
             <div class="login-block">
                 <div class="container containerLogin">
