--- a/src/main/webapp/bezoeker/registreer.xhtml
+++ b/src/main/webapp/bezoeker/registreer.xhtml
@@ -13,6 +13,7 @@
         <f:metadata >
             <f:viewAction action="#{ViewController.setActiveTab('login')}" />
         </f:metadata>
+        <ui:define name="title">Registreren</ui:define>
         <ui:define name="content">
             <div class="login-block">
                 <div class="container containerLogin">
