--- a/src/main/webapp/gebruiker/boekingen.xhtml
+++ b/src/main/webapp/gebruiker/boekingen.xhtml
@@ -10,17 +10,14 @@
       xmlns:b="http://bootsfaces.net/ui"
 xmlns:c="http://java.sun.com/jsp/jstl/core">
 
-<h:head>
-    <ui:define name="title">Reizen bewerken</ui:define>
-
-</h:head>
-
 <h:body>
-    <h:form>
-        <ui:composition template="/templates/layout.xhtml">
-            <ui:define name="title">Uw boekingen</ui:define>
-            <ui:define name="content">
-                <br/>
+    <ui:composition template="/templates/layout.xhtml">
+        <f:metadata >
+            <f:viewAction action="#{ViewController.setActiveTab('boekingen')}" />
+        </f:metadata>
+        <ui:define name="title">Uw boekingen</ui:define>
+        <ui:define name="content">
+            <h:form>
                 <div class="accordion" id="accordionReizen">
                     <h:form>
                         <ui:repeat value="#{BookingController.getReizenByUserId(GebruikerController.aangemeldeGebruiker.id)}" var="booking">
@@ -92,8 +89,8 @@ xmlns:c="http://java.sun.com/jsp/jstl/core">
                         </ui:repeat>
                     </h:form>
                 </div>
-            </ui:define>
-        </ui:composition>
-    </h:form>
+            </h:form>
+        </ui:define>
+    </ui:composition>
 </h:body>
 </html>
