--- a/src/main/webapp/admin/reizen.xhtml
+++ b/src/main/webapp/admin/reizen.xhtml
@@ -14,6 +14,140 @@
     </f:metadata>
     <ui:define name="title">Reizen beheren</ui:define>
     <ui:define name="content">
+        <div class="container-fluid">
+            <div class="row admintitle">
+        <div class="col">
+            <h1>Reizen beheren</h1>
+        </div>
+        <div class="col-auto">
+            <h:form>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12 text-right">
+                            <h:commandButton action="#{ReisController.newReis()}" value="Maak nieuwe reis aan" styleClass="btn btn-primary">
+                                <f:ajax event="action" render="@all" onevent="showReisModal"/>
+                            </h:commandButton>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="modal fade" id="reisModal" tabindex="-1" role="dialog" aria-labelledby="reisModallabel" aria-hidden="true">
+                    <div class="modal-dialog modal-lg" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="reisModallabel">
+                                    Reis aanpassen/wijzigen
+                                </h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+
+                            <div class="modal-body">
+                                <div class="form-group row">
+                                    <label for="updateVertrekLocatie" class="col-sm-3 col-form-label">Vertreklocatie</label>
+                                    <div class="col-sm-9">
+                                        <h:selectOneMenu class="form-control" binding="#{vertrekLocatieId}" id="updateVertrekLocatie" value="#{ReisController.geselecteerdeReis.vertrekLocatie.id}">
+                                            <f:selectItems  value="#{LocatieController.locaties}" var="l" itemLabel="#{l}" itemValue="#{l.id}" />
+                                        </h:selectOneMenu>
+                                    </div>
+                                </div>
+
+                                <div class="form-group row">
+                                    <label for="updateAankomstLocatie" class="col-sm-3 col-form-label">Aankomstlocatie</label>
+                                    <div class="col-sm-9">
+                                        <h:selectOneMenu class="form-control" binding="#{aankomstLocatieId}" id="updateAankomstLocatie" value="#{ReisController.geselecteerdeReis.aankomstLocatie.id}">
+                                            <f:selectItems  value="#{LocatieController.locaties}" var="l" itemLabel="#{l}" itemValue="#{l.id}" />
+                                        </h:selectOneMenu>
+                                    </div>
+                                </div>
+
+                                <div class="form-group row">
+                                    <label for="updateVertrekDatum" class="col-sm-3 col-form-label">Vertrekdatum</label>
+                                    <div class="col-sm-4">
+                                        <h:inputText a:type="date" value="#{reis.vertrekTijd}" styleClass="form-control" id="updateVertrekDatum">
+                                            <f:convertDateTime pattern="MM-dd-yyyy" />
+                                        </h:inputText>
+                                    </div>
+                                    <label for="updateVertrekTijd" class="col-sm-3 col-form-label">Vertrektijd</label>
+                                    <div class="col-sm-3">
+                                        <h:inputText a:type="time" value="#{reis.vertrekTijd}" styleClass="form-control" id="updateVertrekTijd">
+                                            <f:convertDateTime pattern="HH:mm" />
+                                        </h:inputText>
+                                    </div>
+                                </div>
+
+
+                                <div class="form-group row">
+                                    <label for="updateVertreDatum" class="col-sm-3 col-form-label">Vertrekdatum</label>
+                                    <div class="col-sm-9">
+                                        <h:selectOneMenu class="form-control" binding="#{vertrekLocatieId}" id="updateVertreDatum" value="#{ReisController.geselecteerdeReis.vertrekLocatie.id}">
+                                            <f:selectItems  value="#{LocatieController.locaties}" var="l" itemLabel="#{l}" itemValue="#{l.id}" />
+                                        </h:selectOneMenu>
+                                    </div>
+                                </div>
+
+
+
+                                <div class="form-group row">
+                                    <label for="updatePlaatsen" class="col-sm-3 col-form-label">Plaatsen</label>
+                                    <div class="col-sm-9">
+                                        <h:inputText value="#{ReisController.geselecteerdeReis.plaatsen}" binding="#{plaatsen}" styleClass="form-control" id="updatePlaatsen" />
+                                    </div>
+                                </div>
+
+                                <div class="form-group row">
+                                    <label for="updateprijsPerzoon" class="col-sm-3 col-form-label">Prijs per persoon</label>
+                                    <div class="col-sm-9">
+                                        <h:inputText value="#{ReisController.geselecteerdeReis.prijsPerPersoon}" binding="#{prijsPerPersoon}" styleClass="form-control" id="updateprijsPerzoon" />
+                                    </div>
+                                </div>
+
+                                <div class="form-group row">
+                                    <label for="updateTransportmiddel" class="col-sm-3 col-form-label">Vervoermiddel</label>
+                                    <div class="col-sm-9">
+                                        <h:inputText value="#{ReisController.geselecteerdeReis.transportmiddel}" binding="#{transportmiddel}" styleClass="form-control" id="updateTransportmiddel" />
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label for="updateFoto" class="col-sm-3 col-form-label">Foto</label>
+                                    <div class="col-sm-9">
+                                        <h:inputText value="#{ReisController.geselecteerdeReis.foto}" binding="#{foto}" styleClass="form-control" id="updateFoto" />
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                <h:commandButton type="submit" action="#{ReisController.updateReis(ReisController.geselecteerdeReis.id, vertrekLocatieId.value, aankomstLocatieId.value, prijsPerPersoon.value, transportmiddel.value, plaatsen.value)}" styleClass="btn btn-primary" value="Sla reis op" />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="modal fade" id="confirmModal" tabindex="-1" role="dialog" aria-labelledby="confirmModalLabel" aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="confirmModalLabel">Bevestiging</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                Weet u zeker dat u de reis #{ReisController.geselecteerdeReis} wilt verwijderen?
+                                Deze actie kan niet ongedaan gemaakt worden!
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Annuleer</button>
+                                <h:commandButton action="#{ReisController.deleteReis(ReisController.geselecteerdeId)}" value="Bevestig" styleClass="btn btn-danger" />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </h:form>
+        </div>
+            </div>
+
 
         <div class="accordion" id="accordionReizen">
             <h:form>
@@ -119,128 +253,17 @@
                     </div>
 
                 </ui:repeat>
-                <br/>
-                <div class="container">
-                    <div class="row">
-                        <div class="col-12 text-right">
-                            <h:commandButton action="#{ReisController.newReis()}" value="Maak nieuwe reis aan" styleClass="btn btn-primary">
-                                <f:ajax event="action" render="@all" onevent="showReisModal"/>
-                            </h:commandButton>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="modal fade" id="reisModal" tabindex="-1" role="dialog" aria-labelledby="reisModallabel" aria-hidden="true">
-                    <div class="modal-dialog modal-lg" role="document">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h5 class="modal-title" id="reisModallabel">
-                                    Reis aanpassen/wijzigen
-                                </h5>
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                    <span aria-hidden="true">&times;</span>
-                                </button>
-                            </div>
-
-                            <div class="modal-body">
-                                <div class="form-group row">
-                                    <label for="updateVertrekLocatie" class="col-sm-3 col-form-label">Vertreklocatie</label>
-                                    <div class="col-sm-9">
-                                        <h:selectOneMenu class="form-control" binding="#{vertrekLocatieId}" id="updateVertrekLocatie" value="#{ReisController.geselecteerdeReis.vertrekLocatie.id}">
-                                            <f:selectItems  value="#{LocatieController.locaties}" var="l" itemLabel="#{l}" itemValue="#{l.id}" />
-                                        </h:selectOneMenu>
-                                    </div>
-                                </div>
-
-                                <div class="form-group row">
-                                    <label for="updateVertrekDatum" class="col-sm-3 col-form-label">Vertrekdatum</label>
-                                    <div class="col-sm-4">
-                                        <h:inputText a:type="date" value="#{reis.vertrekTijd}" styleClass="form-control" id="updateVertrekDatum">
-                                            <f:convertDateTime pattern="MM-dd-yyyy" />
-                                        </h:inputText>
-                                    </div>
-                                    <label for="updateVertrekTijd" class="col-sm-3 col-form-label">Vertrektijd</label>
-                                    <div class="col-sm-3">
-                                        <h:inputText a:type="time" value="#{reis.vertrekTijd}" styleClass="form-control" id="updateVertrekTijd">
-                                            <f:convertDateTime pattern="HH:mm" />
-                                        </h:inputText>
-                                    </div>
-                                </div>
 
 
-                                <div class="form-group row">
-                                    <label for="updateVertreDatum" class="col-sm-3 col-form-label">Vertrekdatum</label>
-                                    <div class="col-sm-9">
-                                        <h:selectOneMenu class="form-control" binding="#{vertrekLocatieId}" id="updateVertreDatum" value="#{ReisController.geselecteerdeReis.vertrekLocatie.id}">
-                                            <f:selectItems  value="#{LocatieController.locaties}" var="l" itemLabel="#{l}" itemValue="#{l.id}" />
-                                        </h:selectOneMenu>
-                                    </div>
-                                </div>
-
-                                <div class="form-group row">
-                                    <label for="updateAankomstLocatie" class="col-sm-3 col-form-label">Aankomstlocatie</label>
-                                    <div class="col-sm-9">
-                                        <h:selectOneMenu class="form-control" binding="#{aankomstLocatieId}" id="updateAankomstLocatie" value="#{ReisController.geselecteerdeReis.aankomstLocatie.id}">
-                                            <f:selectItems  value="#{LocatieController.locaties}" var="l" itemLabel="#{l}" itemValue="#{l.id}" />
-                                        </h:selectOneMenu>
-                                    </div>
-                                </div>
-
-                                <div class="form-group row">
-                                    <label for="updatePlaatsen" class="col-sm-3 col-form-label">Plaatsen</label>
-                                    <div class="col-sm-9">
-                                        <h:inputText value="#{ReisController.geselecteerdeReis.plaatsen}" binding="#{plaatsen}" styleClass="form-control" id="updatePlaatsen" />
-                                    </div>
-                                </div>
-
-                                <div class="form-group row">
-                                    <label for="updateprijsPerzoon" class="col-sm-3 col-form-label">Prijs per persoon</label>
-                                    <div class="col-sm-9">
-                                        <h:inputText value="#{ReisController.geselecteerdeReis.prijsPerPersoon}" binding="#{prijsPerPersoon}" styleClass="form-control" id="updateprijsPerzoon" />
-                                    </div>
-                                </div>
-
-                                <div class="form-group row">
-                                    <label for="updateTransportmiddel" class="col-sm-3 col-form-label">Vervoermiddel</label>
-                                    <div class="col-sm-9">
-                                        <h:inputText value="#{ReisController.geselecteerdeReis.transportmiddel}" binding="#{transportmiddel}" styleClass="form-control" id="updateTransportmiddel" />
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                <h:commandButton type="submit" action="#{ReisController.updateReis(ReisController.geselecteerdeReis.id, vertrekLocatieId.value, aankomstLocatieId.value, prijsPerPersoon.value, transportmiddel.value, plaatsen.value)}" styleClass="btn btn-primary" value="Sla reis op" />
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="modal fade" id="confirmModal" tabindex="-1" role="dialog" aria-labelledby="confirmModalLabel" aria-hidden="true">
-                    <div class="modal-dialog" role="document">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h5 class="modal-title" id="confirmModalLabel">Bevestiging</h5>
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                    <span aria-hidden="true">&times;</span>
-                                </button>
-                            </div>
-                            <div class="modal-body">
-                                Weet u zeker dat u de reis #{ReisController.geselecteerdeReis} wilt verwijderen?
-                                Deze actie kan niet ongedaan gemaakt worden!
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Annuleer</button>
-                                <h:commandButton action="#{ReisController.deleteReis(ReisController.geselecteerdeId)}" value="Bevestig" styleClass="btn btn-danger" />
-                            </div>
-                        </div>
-                    </div>
-                </div>
             </h:form>
+        </div>
         </div>
         <script>
             function showReisModal(data) {
                 if (data.status == "success") {
                     $('#reisModal').modal();
+                    document.getElementById("loader").style.display = "none";
+                    document.getElementById("loadDiv").style.display = "block";
                 }
             }
             function showConfirmModal(data) {
