--- a/src/main/webapp/bezoeker/reizen.xhtml
+++ b/src/main/webapp/bezoeker/reizen.xhtml
@@ -57,7 +57,7 @@
                         <h:column name="Plaatsen">
                             <f:facet name="header">Plaatsen/al geboekt</f:facet>
                             <h:outputText value="#{reis.plaatsen} / "  />
-                            <h:outputText value="#{BookingController.aantalPlaatenOver(reis.id)}"/>
+                            <h:outputText value="#{BookingController.aantalPlaatsenOver(reis.id)}"/>
                         </h:column>
 
                         <h:column>
