--- a/src/main/webapp/bezoeker/reizen.xhtml
+++ b/src/main/webapp/bezoeker/reizen.xhtml
@@ -51,10 +51,12 @@
 
                                             <f:selectItem itemLabel="transport" itemValue="#{ReisController.getReizenFilterByTransportmiddel(filtertekst.text)}"/>
                                             -->
-                                            <f:selectItem itemLabel="nietsGeselecteerd" itemValue="0"/>
+                                            <f:selectItem itemLabel="Niets geselecteerd" itemValue="0"/>
                                             <f:selectItem itemLabel="vertrek locatie" itemValue="1"/>
                                             <f:selectItem itemLabel="aankomst locatie" itemValue="2"/>
                                             <f:selectItem itemLabel="transport" itemValue="3"/>
+                                            <f:selectItem itemLabel="Aantal plaatsen" itemValue="4"/>
+                                            <f:selectItem itemLabel="Budget" itemValue="5"/>
                                         </h:selectOneMenu>
 
                                         <h:inputText value="#{ReisController.filterTekst}" id="filtertext"></h:inputText>
