--- a/src/main/webapp/bezoeker/reizen.xhtml
+++ b/src/main/webapp/bezoeker/reizen.xhtml
@@ -28,8 +28,8 @@
                                 </div>
                                 <div class="card-body">
                                     <h:form class="form-inline my-2 my-lg-0">
-                                        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search"/>
-                                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                                        <input class="form-control mr-sm-2" type="search" placeholder="Zoeken" aria-label="Zoeken"/>
+                                        <button class="btn btn-default zoek-btn" type="submit">Zoeken</button>
                                     </h:form>
                                 </div>
                                 <div class="card-header" >
@@ -42,10 +42,12 @@
                                     <h5 class="mb-0">Filteren</h5>
                                 </div>
                                 <div class="card-body">
-                                    Filter opties hier
 
                                      <h:form>
-                                        <h:selectOneMenu value="#{ReisController.geselecteerdeFilter}">
+
+                                        <h:inputText value="#{ReisController.filterTekst}"  class="form-control mr-sm-2" id="filtertext" ></h:inputText>
+
+                                        <h:selectOneMenu styleClass="btn btn-default zoek-btn" value="#{ReisController.geselecteerdeFilter}">
                                             <!--<f:selectItem itemLabel="vertrek locatie" itemValue="#{ReisController.getReizenFilterByVertrekLocatie(filtertekst.text)}"/>
                                             <f:selectItem itemLabel="aankomst locatie" itemValue="#{ReisController.getReizenFilterByAankomstLocatie(filtertekst.text)}"/>
 
@@ -57,12 +59,15 @@
                                             <f:selectItem itemLabel="transport" itemValue="3"/>
                                             <f:selectItem itemLabel="Aantal plaatsen" itemValue="4"/>
                                             <f:selectItem itemLabel="Budget" itemValue="5"/>
+                                            <f:selectItem itemLabel="Aankomsttijd" itemValue="6"/>
+                                            <f:selectItem itemLabel="Vertrektijd" itemValue="7"/>
                                         </h:selectOneMenu>
 
-                                        <h:inputText value="#{ReisController.filterTekst}" id="filtertext"></h:inputText>
 
 
-                                        <h:commandButton class="btn btn-primary"  action="#{ReisController.submitFilter}" value="filter"/>
+
+
+                                        <h:commandButton class="btn btn-default zoek-btn"  action="#{ReisController.submitFilter}" value="filter"/>
                                      </h:form>
                                 </div>
                             </div>
