--- a/src/main/webapp/gebruiker/boekingen.xhtml
+++ b/src/main/webapp/gebruiker/boekingen.xhtml
@@ -17,44 +17,48 @@ xmlns:c="http://java.sun.com/jsp/jstl/core">
         </f:metadata>
         <ui:define name="title">Uw boekingen</ui:define>
         <ui:define name="content">
-            <div class="container-fluid">
+            <div class="text-center">
+                <h2 class="section-title">
+                    Al uw boekingen op 1 plaats
+                </h2>
+                <br/>
+            </div>
+            <div class="container">
                 <!-- Page Content -->
                 <div class="row">
-                    <div class="col-lg-12">
-                        <div class="row">
-                            <ui:repeat value="#{BookingController.getReizenByUserId(GebruikerController.aangemeldeGebruiker.id)}" var="booking">
-                                <div class="col-xl-3 col-lg-6 col-md-6 mb-4">
-                                    <div class="card h-100">
-                                        <a href="#" class="card-img-top" style="background-image: url(#{booking.reis.foto})"/>
-                                        <div class="card-body">
-                                            <h3 class="card-title row">
-                                                <a class="col reistitle" href="#">#{booking.reis.aankomstLocatie.naam}</a>
-                                                <ui:fragment rendered="#{booking.reis.transportmiddel == 'bus'}">
-                                                    <span class="col-auto reistitle"><i class="fas fa-bus fa-lg fa-fw"></i></span>
-                                                </ui:fragment>
-                                                <ui:fragment rendered="#{booking.reis.transportmiddel == 'vliegtuig'}">
-                                                    <span class="col-auto reistitle"><i class="fas fa-plane fa-lg fa-fw"></i></span>
-                                                </ui:fragment>
-                                            </h3>
-                                            <p class="card-text"><i class="far fa-calendar-alt fa-fw"></i> #{booking.reis.vertrekTijd} - #{booking.reis.aankomstTijd}</p>
-                                            <p class="card-text"><i class="fas fa-plane-departure fa-fw"></i> #{booking.reis.vertrekLocatie.stad} (#{booking.reis.vertrekLocatie.code}) - #{booking.reis.vertrekLocatie.land}</p>
-                                            <p class="card-text"><i class="fas fa-plane-arrival fa-fw"></i> #{booking.reis.aankomstLocatie.stad} (#{booking.reis.aankomstLocatie.code}) - #{booking.reis.aankomstLocatie.land}</p>
-                                        </div>
-                                        <div class="card-footer">
-                                            <div class="row">
-                                                <span class="col"><strong>Totaal Prijs: </strong>#{booking.aantalPersonen} X #{booking.prijsPPTeBetalen} = #{booking.aantalPersonen * booking.prijsPPTeBetalen}</span>
-                                                <h:form styleClass="col-auto text-right">
-                                                    <h:outputLabel rendered="#{booking.isBetaald()}"  id="displayBetaalt#{booking.reis.id}">Betaalt!</h:outputLabel>
-                                                    <h:commandButton rendered="#{!booking.isBetaald()}" value="PayPal" action="#{BookingController.betaalReservatie(booking.id)}" class="btn bestelbtn mr-2 float-left"/>
-                                                    <h:commandButton rendered="#{!booking.isBetaald()}" value="Bancontact" action="#{BookingController.betaalReservatie(booking.id)}" class="btn bestelbtn mr-2 float-left"/>
-                                                </h:form>
-                                            </div>
-                                        </div>
+                    <ui:repeat value="#{BookingController.getReizenByUserId(GebruikerController.aangemeldeGebruiker.id)}" var="booking">
+                        <div class="col-xl-4 col-lg-6 col-md-6 mb-4">
+                            <div class="card h-100">
+                                <a href="#" class="card-img-top" style="background-image: url(#{booking.reis.foto})"/>
+                                <div class="card-body">
+                                    <h3 class="card-title row">
+                                        <a class="col reistitle" href="#">#{booking.reis.aankomstLocatie.naam}</a>
+                                        <ui:fragment rendered="#{booking.reis.transportmiddel == 'bus'}">
+                                            <span class="col-auto reistitle"><i class="fas fa-bus fa-lg fa-fw"></i></span>
+                                        </ui:fragment>
+                                        <ui:fragment rendered="#{booking.reis.transportmiddel == 'vliegtuig'}">
+                                            <span class="col-auto reistitle"><i class="fas fa-plane fa-lg fa-fw"></i></span>
+                                        </ui:fragment>
+                                    </h3>
+                                    <p class="card-text"><i class="far fa-calendar-alt fa-fw"></i> #{booking.reis.vertrekTijd} - #{booking.reis.aankomstTijd}</p>
+                                    <p class="card-text"><i class="fas fa-plane-departure fa-fw"></i> #{booking.reis.vertrekLocatie.stad} (#{booking.reis.vertrekLocatie.code}) - #{booking.reis.vertrekLocatie.land}</p>
+                                    <p class="card-text"><i class="fas fa-plane-arrival fa-fw"></i> #{booking.reis.aankomstLocatie.stad} (#{booking.reis.aankomstLocatie.code}) - #{booking.reis.aankomstLocatie.land}</p>
+                                </div>
+                                <div class="card-footer">
+                                    <div class="row mt2 mb-2">
+                                        <span class="col"><strong>Totaal Prijs: </strong>#{booking.aantalPersonen} X #{booking.prijsPPTeBetalen} = #{booking.aantalPersonen * booking.prijsPPTeBetalen}</span>
+                                    </div>
+                                    <div class="row">
+                                        <h:form styleClass="col-auto text-right">
+                                            <h:outputLabel rendered="#{booking.isBetaald()}"  id="displayBetaalt#{booking.reis.id}">Betaalt!</h:outputLabel>
+                                            <h:commandButton rendered="#{!booking.isBetaald()}" value="PayPal" action="#{BookingController.betaalReservatie(booking.id)}" class="btn bestelbtn mr-2 float-left"/>
+                                            <h:commandButton rendered="#{!booking.isBetaald()}" value="Bancontact" action="#{BookingController.betaalReservatie(booking.id)}" class="btn bestelbtn mr-2 float-left"/>
+                                        </h:form>
                                     </div>
                                 </div>
-                            </ui:repeat>
+                            </div>
                         </div>
-                    </div>
+                    </ui:repeat>
                 </div>
             </div>
         </ui:define>
