--- a/src/main/webapp/bezoeker/reizen.xhtml
+++ b/src/main/webapp/bezoeker/reizen.xhtml
@@ -90,7 +90,7 @@
                                             </div>
                                             <div class="card-footer">
                                                 <div class="row">
-                                                    <span class="col">#{reis.plaatsen} plaatsen over</span>
+                                                    <span class="col">#{BookingController.aantalPlaatsenOver(reis.id)}/#{reis.plaatsen} plaatsen</span>
                                                     <h:form styleClass="col-auto text-right">
                                                         <h:outputLink class="btn bestelbtn" value="/travelmore/bezoeker/login.xhtml" rendered="#{GebruikerController.getAangemeld() == false}">Nu boeken</h:outputLink>
                                                         <h:commandButton class="btn bestelbtn" action="#{BookingController.navigateToBooken(reis.id)}" value="Nu boeken" rendered="#{GebruikerController.getAangemeld() == true}"/>
